# jdreaver.com

./: .gitignore  Makefile  about.rst  contact.markdown  deploy.sh  hakyll.hs  ideas.org  index.html  jdreaver-site.cabal  jdreaver.com.cabal  package.yaml  site.hs  stack.yaml
.circleci/: Dockerfile  config.yml  upload-custom-image.sh
ansible/: hosts  play.yml
ansible/roles/apache/handlers/: main.yml
ansible/roles/apache/tasks/: apache.yml  apache_install.yml  apache_site.yml
ansible/roles/apache/templates/: jdreaver.com.conf.j2
ansible/roles/apache/vars/: main.yml
ansible/roles/site/tasks/: apt.yml  ghc.yml  main.yml  site.yml  ufw.yml
ansible/roles/site/vars/: main.yml
css/: default.css
drafts/: 2014-06-20-one-advantage-of-tdd.markdown
posts/: 2014-06-17-first.markdown  2014-06-22-math-programming-blog-hakyll.markdown  2014-07-03-waiting-for-signals-pyside-pyqt.markdown  2014-07-28-scientific-notation-spin-box-pyside.markdown  2014-10-31-double-slider.markdown  2015-12-02-ansible-stack.markdown
templates/: default.html  post.html
