name:                jdreaver-site
version:             1.0.0
synopsis:            My blog
homepage:            http://jdreaver.com
license:             BSD3
license-file:        LICENSE
author:              John David Reaver
maintainer:          johndreaver@gmail.com
build-type:          Simple
cabal-version:       >=1.18

executable jdreaver-site
  main-is:             hakyll.hs
  build-depends:       base >=4.7, containers, hakyll, pandoc
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
